--- a/package.json
+++ b/package.json
@@ -5,5 +5,14 @@
   "main": "index.js",
   "repository": "https://github.com/JeoungSulMo/typechain.git",
   "author": "sulmo",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "typescript": "^3.8.3"
+  },
+  "scripts": {
+    "start": "tsc-watch --onSuccess \" node dist/index.js\" "
+  },
+  "devDependencies": {
+    "tsc-watch": "^4.2.3"
+  }
 }
