--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "sulmo",
   "license": "MIT",
   "dependencies": {
+    "crypto-js": "^4.0.0",
     "typescript": "^3.8.3"
   },
   "scripts": {
